# roBERT

./: .env  .gitignore  LICENSE  README.md  build.sh  docker-compose.dev.yml  docker-compose.yaml  package.json
.github/workflows/: build.yml  docker_build.yml  docker_build_and_push.yml  front_service.yml  nest_service.yml  reader_service.yml  release.yml
base/: BASE.md
base/javascript/: Dockerfile
base/node/: Dockerfile
base/node/interfaces/: package.json
base/rust/: .dockerignore  Dockerfile
lib/reader/: .gitignore  Cargo.toml  foo.txt  rustfmt.toml
lib/reader/src/: book.rs  errors.rs  header.rs  lib.rs  lz77.rs  main.rs
libs/rust/reader/: Mobiheader.xlsx
services/: SERVICES.md
services/api-gateway/: Dockerfile  README.md  nest-cli.json  package.json  tsconfig.json
services/database/: README.md  package.json
services/database/app/: app.ts  author.ts  database.ts
services/front/: .dockerignore  .eslintrc.json  Dockerfile  README.md  package.json
services/front/src/: App.test.tsx  App.tsx  index.tsx  theme.ts  typedComponent.tsx
services/node-services/: .dockerignore  Dockerfile  package.json
services/reader/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev  build.rs
services/reader/src/server/: mod.rs  reader_server.rs
src/database/: README.md
src/interfaces/: package.json  public-api.ts
src/interfaces/database/: api.ts  author-by-id.ts  author.ts  database.proto  public-api.ts
src/services/: package.json
src/services/reader/: .gitignore  Cargo.toml  build.rs
src/services/reader/protos/: reader.proto
src/services/reader/src/: service.rs
src/services/reader/src/server/: reader_server.rs
src/services/reader/src/tests/: reader.rs
src/services/reader/src/tests/data/: example.mobi
(+71 files in other folders)
