[package]
name = "reader"
version = "0.1.0"
authors = ["Anthony D'Amato <anthony.damato@hotmail.fr>"]
edition = "2018"

[[bin]]
name = "reader-server"
path = "src/service.rs"

[dependencies]
async-stream="0.2"
book-reader={ path="../../../lib/reader" }
tonic="0.1"
prost="0.6"
tokio = { version = "0.2", features = ["macros"] }
futures ="0.3"

[build-dependencies]
tonic-build="0.1"
